--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section>
   <h1>Besoin d'infos ? Vous manquez de RedBull ?</h1>
   <h2>Laissez-nous un message</h2>
-  <form (submit)="coucouToi()">
+  <form (submit)="saveMessage()">
     <label >Nom</label>
     <input name="nom" [(ngModel)]="contact.nom" #ctlNom="ngModel" required minlength="8">
     <span *ngIf="ctlNom && ctlNom.value && ctlNom.value.length < 8">Le champ doit avoir au moins 8 caractères</span>
