--- a/src/app/organisation/template/orga-menu/orga-menu.component.html
+++ b/src/app/organisation/template/orga-menu/orga-menu.component.html
@@ -1,7 +1,7 @@
-<nav>
+<nav class="orga-menu">
   <ul>
-    <li routerLink="/organisation">Accueil Organisation</li>
-    <li routerLink="/organisation/events">Évènements</li>
-    <li routerLink="/organisation/stocks">Stocks</li>
+    <li routerLink="/organisation" routerLinkActive="active"><a>Accueil Organisation</a></li>
+    <li routerLink="/organisation/events" routerLinkActive="active"><a>Évènements</a></li>
+    <li routerLink="/organisation/stocks" routerLinkActive="active"><a>Stocks</a></li>
   </ul>
 </nav>
