--- a/src/app/pages/evenement/evenement.component.html
+++ b/src/app/pages/evenement/evenement.component.html
@@ -1,14 +1,29 @@
-<section *ngIf="!loader">
+<section *ngIf="!loader" class="event-section">
   <h2>{{ event.titre }}</h2>
-  <td>{{ event.places }}</td>
-  <td>{{ event.horaires.debut }}</td>
-  <td>{{ event.horaires.fin }}</td>
-  <td>{{ event.date | date:'MMM d, y, h:mm:ss a' }}</td>
-  <img src="https://via.placeholder.com/150" alt="Placeholder image">
-  <button (click)="registration()" *ngIf="auth.isLoggedIn && !isRegistered && event.places > countParticipations && auth.profil">Réserver ma place</button>
-  <button disabled *ngIf="auth.isLoggedIn && !isRegistered && event.places <= countParticipations">Il n'y a plus de place</button>
-  <button disabled *ngIf="auth.isLoggedIn && isRegistered">Vous êtes déjà inscrit</button>
-  <button (click)="deregistration()" *ngIf="auth.isLoggedIn && isRegistered">Se désinscrire</button>
-  <a *ngIf="!auth.isLoggedIn" routerLink="/inscription">Inscrivez vous pour y participer</a>
-
+  <div class="event-details">
+    <div class="detail">
+      <span>Places disponibles:</span>
+      <span>{{ event.places }}</span>
+    </div>
+    <div class="detail">
+      <span>Début:</span>
+      <span>{{ event.horaires.debut }}</span>
+    </div>
+    <div class="detail">
+      <span>Fin:</span>
+      <span>{{ event.horaires.fin }}</span>
+    </div>
+    <div class="detail">
+      <span>Date:</span>
+      <span>{{ event.date | date:'MMM d, y, h:mm:ss a' }}</span>
+    </div>
+  </div>
+  <img src="https://via.placeholder.com/150" alt="Placeholder image" class="event-image">
+  <div class="event-actions">
+    <button (click)="registration()" *ngIf="auth.isLoggedIn && !isRegistered && event.places > countParticipations && auth.profil">Réserver ma place</button>
+    <button disabled *ngIf="auth.isLoggedIn && !isRegistered && event.places <= countParticipations">Il n'y a plus de place</button>
+    <button disabled *ngIf="auth.isLoggedIn && isRegistered">Vous êtes déjà inscrit</button>
+    <button (click)="deregistration()" *ngIf="auth.isLoggedIn && isRegistered">Se désinscrire</button>
+    <a *ngIf="!auth.isLoggedIn" routerLink="/inscription">Inscrivez-vous pour y participer</a>
+  </div>
 </section>
