--- a/src/app/pages/rgpd/rgpd.component.html
+++ b/src/app/pages/rgpd/rgpd.component.html
@@ -1,1 +1,12 @@
-<p>rgpd works!</p>
+<section class="legal-page">
+    <h1>Mentions Légales</h1>
+  
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo id ex fermentum, vel ultricies ex aliquam. Nulla facilisi. Suspendisse potenti. Maecenas eu turpis a justo varius euismod.</p>
+  
+    <h2>RGPD - Règlement Général sur la Protection des Données</h2>
+  
+    <p>Le RGPD est une réglementation européenne visant à renforcer la protection des données personnelles des individus. Il impose des règles strictes sur la collecte, le traitement et le stockage des données personnelles.</p>
+  
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo id ex fermentum, vel ultricies ex aliquam. Nulla facilisi. Suspendisse potenti. Maecenas eu turpis a justo varius euismod.</p>
+</section>
+  
