--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -1,14 +1,65 @@
-button {
-  padding: 10px 15px;
-  background-color: #e9e9e9;
-  border: none;
-  transition: background-color .3s ease;
-  align-self: fixed-end;
-  width: fix-content;
-  margin: 10px;
+/* Appliquer des styles à la section du formulaire */
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-button:hover{
-  background-color: green;
+/* Style du titre principal */
+h1 {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+/* Appliquer des styles au formulaire */
+form {
+  width: 70%;
+  margin: 0 auto;
+  max-width: 400px;
+}
+
+/* Style des étiquettes */
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+/* Style des champs de saisie */
+input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Style du message d'erreur */
+span {
+  color: #721c24;
+}
+
+/* Style des boutons */
+button {
+  background-color: #4caf50;
   color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  margin-right: 10px;
+}
+
+button[type="reset"] {
+  background-color: #f44336;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+button[type="reset"]:hover {
+  background-color: #d32f2f;
 }
