--- a/src/app/pages/erreur/erreur.component.html
+++ b/src/app/pages/erreur/erreur.component.html
@@ -1,1 +1,6 @@
-<p>erreur works!</p>
+<section class="error-section">
+    <h1>Erreur 404</h1>
+    <p>Désolé, la page que vous recherchez n'a pas pu être trouvée.</p>
+    <a routerLink="/">Retour à la page d'accueil</a>
+</section>
+  
