--- a/src/app/pages/evenements/evenements.component.css
+++ b/src/app/pages/evenements/evenements.component.css
@@ -1,7 +1,76 @@
 section {
-  padding-left: 20px;
+  margin: 20px;
+}
+
+/* Style du champ de filtre */
+fieldset {
+  margin-bottom: 20px;
+}
+
+input {
+  padding: 10px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 1em;
+}
+
+/* Style du tableau des événements */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead {
+  background-color: #f8f8f8;
+}
+
+th,
+td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+/*Style des liens */
+a {
+  color: #4caf50;
+  /* Utiliser la couleur du site pour les liens */
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Style de la pagination */
+.pagination {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items:flex-start;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+button:hover {
+  filter: brightness(90%);
+}
+
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+/* Ajouter une marge au bas de la section de pagination */
+.pagination {
+  margin-bottom: 20px;
 }
