Welcoming message and displaying images

--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -3,4 +3,7 @@
   <h2>{{ soustitre }}</h2>
 </header>
 <section>
+  <p class="welcome-text">
+    Découvrez notre appli de gestion d'événements ! Participez facilement ou organisez des soirées inoubliables. Simplifiez-vous la vie nocturne : inscriptions rapides, exploration d'événements variés, création facile, gestion des stocks, modifications en temps réel. Soyez participant ou organisateur sans souci logistique. Rejoignez-nous pour des moments inoubliables ! 🎉
+  </p>
 </section>
