--- a/src/app/organisation/pages/accueil/accueil.component.html
+++ b/src/app/organisation/pages/accueil/accueil.component.html
@@ -1,6 +1,8 @@
 <section>
   <header>
-    <h2>Bienvenue dans l'espace dédié à la gestion de l'organisation </h2>
+    <h2>Bienvenue dans l'espace dédié à la gestion de l'organisation</h2>
   </header>
-  <article></article>
+  <section>
+    <p>Explorez un monde d'opportunités où la magie de l'organisation prend vie! En tant qu'organisateur passionné, cet espace vous offre la possibilité de créer des événements extraordinaires et de jongler avec les détails pour qu'ils soient aussi uniques que vous.🎉</p>
+  </section>
 </section>
