--- a/src/app/organisation/template/orga-menu/orga-menu.component.html
+++ b/src/app/organisation/template/orga-menu/orga-menu.component.html
@@ -1,6 +1,6 @@
 <nav class="orga-menu">
   <ul>
-    <li routerLink="/organisation" routerLinkActive="active"><a>Accueil Organisation</a></li>
+    <li routerLink="/organisation" routerLinkActive="active"><a>Organisation</a></li>
     <li routerLink="/organisation/events" routerLinkActive="active"><a>Évènements</a></li>
     <li routerLink="/organisation/stocks" routerLinkActive="active"><a>Stocks</a></li>
   </ul>
