--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -56,10 +56,27 @@ button[type="reset"] {
   background-color: #f44336;
 }
 
-button:hover {
+button::not(.disabled-button):hover {
   background-color: #45a049;
 }
 
 button[type="reset"]:hover {
   background-color: #d32f2f;
+}
+
+.confirmation-message {
+  margin-top: 20px;
+  padding: 10px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
+
+.required {
+  color: red;
+}
+
+.disabled-button {
+  background-color: #ccc;
+  color: #999; 
+  cursor: not-allowed;
 }
