--- a/src/app/organisation/pages/update-event/update-event.component.html
+++ b/src/app/organisation/pages/update-event/update-event.component.html
@@ -29,7 +29,7 @@
   
       <fieldset>
         <label>Bandeau</label>
-        <input type="text" formControlName="image_url" placeholder="URL de votre image">
+        <input type="text" formControlName="image" placeholder="URL de votre image">
       </fieldset>
   
       <button type="submit">Modifier l'évènement</button>
