--- a/src/app/organisation/pages/orga-events/orga-events.component.html
+++ b/src/app/organisation/pages/orga-events/orga-events.component.html
@@ -21,7 +21,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let event of paginatedEvents">
+      <tr *ngFor="let event of paginatedEvents | events:filtre">
         <td><a [routerLink]="['/evenement', event.id]">{{ event.titre | uppercase }}</a></td>
         <td><img src="{{ event.image }}" alt="Placeholder image"></td>
         <td>{{ event.places }}</td>
