--- a/src/app/organisation/pages/orga-events/orga-events.component.html
+++ b/src/app/organisation/pages/orga-events/orga-events.component.html
@@ -12,7 +12,7 @@
     <thead>
       <tr>
         <th>Titre</th>
-        <th>Bandeau</th>
+        <th>Image</th>
         <th>Nb. places</th>
         <th>Début</th>
         <th>Fin</th>
