--- a/src/app/organisation/pages/update-event/update-event.component.html
+++ b/src/app/organisation/pages/update-event/update-event.component.html
@@ -28,7 +28,7 @@
       </fieldset>
   
       <fieldset>
-        <label>Bandeau</label>
+        <label>Image</label>
         <input type="text" formControlName="image" placeholder="URL de votre image">
       </fieldset>
   
