--- a/src/app/organisation/pages/add-stock/add-stock.component.css
+++ b/src/app/organisation/pages/add-stock/add-stock.component.css
@@ -57,6 +57,16 @@ button {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-button:hover {
+button::not(.disabled-button):hover {
   background-color: #45a049;
+}
+
+.disabled-button {
+  background-color: #ccc;
+  color: #999; 
+  cursor: not-allowed;
+}
+
+.required {
+  color: red;
 }
