--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,7 @@ footer {
 
 app-menu li,
 app-footer li {
+  font-size: 20px;
   color: #333;
   text-decoration: none;
   margin: 0 15px;
@@ -55,9 +56,4 @@ app-footer ul {
   padding: 0;
   display: flex;
   justify-content: center;
-}
-
-app-menu li,
-app-footer li {
-  margin: 0 15px;
 }
