--- a/src/app/organisation/pages/update-stock/update-stock.component.html
+++ b/src/app/organisation/pages/update-stock/update-stock.component.html
@@ -1,17 +1,18 @@
 <section>
-    <form [formGroup]="stockForm" (submit)="updateStock()">
-      <h1>Modification d'un stock</h1>
+  <form [formGroup]="stockForm" (submit)="updateStock()">
+    <h1>Modification d'un stock</h1>
 
-      <fieldset>
-        <label>Nom*</label>
-        <input formControlName="name" required>
-      </fieldset>
-  
-      <fieldset>
-        <label >Quantité*</label>
-        <input type="number" formControlName="quantity" required>
-      </fieldset>
+    <fieldset>
+      <label>Nom<span class="required">*</span></label>
+      <input formControlName="name" required>
+    </fieldset>
 
-      <button type="submit">Modifier le stock </button>
-    </form>
-  </section>
+    <fieldset>
+      <label>Quantité<span class="required">*</span></label>
+      <input type="number" formControlName="quantity" required>
+    </fieldset>
+
+    <button type="submit" [ngClass]="{'disabled-button': !stockForm.valid}" [disabled]="!stockForm.valid">Modifier le
+      stock </button>
+  </form>
+</section>
