--- a/src/app/pages/evenement/evenement.component.css
+++ b/src/app/pages/evenement/evenement.component.css
@@ -21,21 +21,20 @@ h2 {
   margin-bottom: 20px;
 }
 
+/* Ajuster le style de la classe detail */
 .detail {
-  margin: 5px;
+  margin: 10px; 
   text-align: center;
+  border: 1px solid #ddd; 
+  padding: 15px; 
+  border-radius: 8px; 
+  background-color: #f8f8f8; 
 }
 
 .detail span {
   display: block;
   color: #666;
-}
-
-/* Style de l'image de l'évènement */
-.event-image {
-  margin: 20px 0;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-weight: bold; /* Rendre le texte en gras */
 }
 
 /* Style des actions de l'évènement */
@@ -69,4 +68,23 @@ a:disabled {
   cursor: not-allowed;
   opacity: 0.7;
   color: #888;
+}
+
+.inscription-link {
+  display: block;
+  margin: 5px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #333;
+  font-size: 1em;
+  background-color: #4caf50;
+  color: white; 
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.inscription-link:hover {
+  background-color: #45a049;
 }
